<resources>
    <string name="app_name">LoLBet</string>
    <!-- TITLES -->
    <string name="title_create_account">CREER UN COMPTE</string>
    <string name="title_login">BIENVENUE</string>
    <string name="title_search_player">RECHERCHER UN JOUEUR</string>
    <string name="title_my_account">MON PROFIL</string>
    <!-- SUB TITLES -->
    <string name="sub_title_create_account">Rejoignez-nous en quelques secondes</string>
    <string name="sub_title_login">Prêt à entrer dans l\'arène ?</string>
    <!-- BOUTONS -->
    <string name="btn_create_account">S\'inscrire</string>
    <string name="btn_login">Se connecter</string>
    <string name="btn_delete_account">Supprimer mon compte</string>
    <!-- PLACEHOLDERS -->
    <string name="placeholder_password">Mot de passe</string>
    <string name="placeholder_email">Email</string>
    <string name="placeholder_search_player">Nom du joueur (ex: Faker…)</string>
    <!-- TEXTES -->
    <string name="txt_already_account">Déjà un compte ?</string>
    <string name="txt_login">Connectez-vous</string>
    <string name="txt_no_account">Pas encore de compte ?</string>
    <string name="txt_create_account">Inscrivez-vous</string>
    <string name="txt_actual_rank">RANG ACTUEL</string>
    <string name="txt_game_statistics">STATISTIQUES DE JEU</string>
    <string name="txt_wins">Gagnés</string>
    <string name="txt_loses">Perdus</string>
    <string name="txt_winrate">Taux de victoire</string>
    <string name="txt_badges">BADGES ACQUIS</string>
    <string name="title_live_bets">PARIS EN COURS</string>
    <string name="title_bets_history">HISTORIQUE DES PARIS</string>
    <string name="txt_level">Niveau: %1$d</string>
    <string name="txt_rps">🟢 %1$d pts</string>
    <string name="txt_bet_online">Pari en cours…</string>
    <string name="txt_player_id">#%1$d</string>
    <string name="txt_player_lps">(%1$d LP)</string>
    <string name="txt_rps_next_rank">Prochain rang à %1$d pts</string>
    <string name="txt_no_live_bets">Aucun pari en cours</string>
    <string name="txt_bet_for">● Voté %1$s</string>
    <string name="txt_win_title">Gagner</string>
    <string name="txt_lose_title">Perdre</string>
    <string name="txt_bet_championship_or_player_and_date">%1$s - %2$s</string>
    <string name="txt_nb_votes">%1$d votes</string>
</resources>